feature(message-attachment): implement logic getAttachmentsForMessages