@@ -9,8 +9,10 @@ import clyvasync.Clyvasync.service.chat.MessageAttachmentService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,7 +30,17 @@ public class MessageAttachmentServiceImpl implements MessageAttachmentService {
 
     @Override
     public Map<Long, List<AttachmentResponse>> getAttachmentsForMessages(List<Long> messageIds) {
-        return Map.of();
+        if (messageIds == null || messageIds.isEmpty()) {
+            return Collections.emptyMap();
+        }
+
+        List<MessageAttachment> attachments = messageAttachmentRepository.findByMessageIdIn(messageIds);
+
+        return attachments.stream().collect(Collectors.groupingBy(
+                MessageAttachment::getMessageId,
+                Collectors.mapping(att -> new AttachmentResponse(att.getId(), att.getFileUrl(), att.getFileType()),
+                        Collectors.toList())
+        ));
     }
 
     @Override
